--- a/style.css
+++ b/style.css
@@ -1,17 +1,328 @@
-* {
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
+@font-face {
+  font-display: swap;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 300;
+  src: url('../fonts/poppins-v21-latin-300.woff2') format('woff2');
 }
 
-.header {
-    position: relative;
+@font-face {
+  font-display: swap;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/poppins-v21-latin-regular.woff2') format('woff2');
+}
+
+@font-face {
+  font-display: swap;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 600;
+  src: url('../fonts/poppins-v21-latin-600.woff2') format('woff2');
+}
+@font-face {
+  font-display: swap;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 900;
+  src: url('../fonts/poppins-v21-latin-900.woff2') format('woff2');
+}
+
+:root {
+  --color-primery-light: #faf4ea;
+  --color-primery-dark: #31261a;
+  --color-secondary-dark: #a28268;
+  --color-brand-normal: #819b57;
+  --color-brand-dark: #465929;
+  --color-brand-light: #cfcfbc;
+}
+
+/* Base */
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  color: var(--color-primery-dark);
+  background-color: var(--color-primery-light);
+  font-family: 'poppins', sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.5;
+  margin: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+}
+
+address {
+  font-style: normal;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.visually-hidden {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
+
+.section {
+  padding: 48px;
 }
 
 .container {
-    width: 100%;
-    max-width: 1440px;
-    margin: 0px auto;
+  width: 100%;
+  max-width: 1288px;
+  margin: 0 auto;
+  padding: 0 24px;
 }
 
+/* Button */
 
+.button {
+  padding: 16px 32px;
+  color: var(--color-primery-light);
+  font-weight: 600;
+  border-radius: 8px;
+  border: 2px solid var(--color-brand-normal);
+  background-color: var(--color-brand-normal);
+  cursor: pointer;
+}
+
+.button:hover {
+  color: var(--color-brand-dark);
+  background-color: transparent;
+}
+
+/* Link */
+
+.link {
+  color: var(--color-primery-light);
+  line-height: 1.5;
+  text-decoration: none;
+}
+
+.link:hover {
+  color: var(--color-brand-normal);
+}
+
+/* Header */
+
+.header-container {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
+.header-nav {
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+  gap: 40px;
+}
+
+.header-menu {
+  display: flex;
+  gap: 64px;
+  flex-grow: 1;
+  justify-content: center;
+}
+
+/* Hero section */
+
+.hero-section {
+  padding: 272px 0;
+  background-image: url('img/Hero-section-background.jpg');
+  background-repeat: no-repeat;
+  background-position: center top;
+  background-size: cover;
+}
+.hero-title {
+  color: var(--color-primery-light);
+  font-weight: 900;
+  font-size: 96px;
+  text-align: center;
+  margin-bottom: 0;
+}
+
+.hero-title .accent {
+  color: var(--color-brand-normal);
+}
+
+/* Advantages section */
+
+.advantages-section {
+  padding: 16px 0;
+  background-color: var(--color-brand-normal);
+}
+
+.advantages-list {
+  display: flex;
+  justify-content: space-between;
+  gap: 40px;
+}
+
+.advantages-item {
+  color: var(--color-primery-light);
+  font-weight: 20px;
+  font-weight: 300;
+}
+
+.section-title {
+  font-size: 64px;
+  /* font-weight: 900; */
+  line-height: 1.3;
+}
+
+.section-title.centered {
+  text-align: center;
+}
+
+.section-title .accent {
+  color: var(--color-brand-dark);
+}
+
+/* traditions-section */
+
+.traditions-section {
+  padding-top: 96px;
+  gap: 100px;
+}
+
+.traditions-container {
+  display: flex;
+  justify-content: space-between;
+  gap: 40px;
+}
+
+.traditions-content {
+  max-width: 710px;
+}
+
+.traditions-title {
+  margin-bottom: 42px;
+}
+
+.traditions-text .brand {
+  color: var(--color-brand-normal);
+  font-weight: 600;
+}
+
+.traditions-text .uppercase {
+  text-transform: uppercase;
+}
+
+.traditions-text.limited {
+  max-width: 340px;
+}
+
+/* Chef Section */
+
+.chefs-title {
+  max-width: 520px;
+  margin: 0 auto 80px;
+}
+
+.chefs-title::before,
+.chefs-title::after {
+  display: block;
+  width: 352px;
+  border: 2px solid var(--color-brand-light);
+  content: '';
+}
+
+.chef-photo {
+  border-radius: 4px 4px 4px 200px;
+  box-shadow: -16px 16px 0 0 var(--color-primery-light), -16px 16px 0 2px var(--color-secondary-dark)
+}
+
+.chef-title {
+  margin-bottom: 16px;
+  font-size: 40px;
+  font-weight: 600;
+}
+
+/* Formats section */
+
+.format-list {
+  display: flex;
+  /* flex-wrap: wrap; */
+  gap: 20px;
+}
+
+.format-item {
+  flex-basis: calc((100%-40px) / 3);
+}
+
+.format-card {
+  height: 444px;
+  padding: 24px;
+  background-image: linear-gradient(
+    180deg,
+    rgba(49, 38, 26, 0) 55.21%,
+    rgba(49, 38, 26, 0.71) 72.92%,
+    var(--color-primery-dark) 100%
+  );
+  border: 1px solid;
+  border-radius: 16px;
+}
+
+.formats-title {
+  margin-bottom: 80px;
+}
+
+.format-title {
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.format-text {
+  font-size: 14px;
+  font-weight: 300;
+}
+
+/* contact section */
+.contact-title {
+  margin-bottom: 16px;
+}
+/* footer */
+
+.address-link {
+  color: var(--color-primery-light);
+  font-size: 16px;
+  font-weight: 300;
+  text-decoration: none;
+}
+
+.address-link:hover {
+  color: var(--color-brand-normal);
+}
+
+.address-copyright {
+  font-size: 14px;
+}
+
+.footer {
+  background-image: url(img/footer-background.png);
+  background-color: var(--color-primery-dark);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
